# apex-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml  package-lock.json  package.json  post.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmarks.yml  ci.yml  code-quality.yml  deploy-docs.yml  docs_ci.yml  release.yml  security.yml
apex-sdk/: Cargo.toml
apex-sdk-core/: Cargo.toml  README.md
apex-sdk-core/src/: golden_vectors.rs  metrics.rs  mocks.rs
apex-sdk-evm/: Cargo.toml  README.md
apex-sdk-evm/src/: lib.rs  pool.rs  transaction.rs
apex-sdk-metrics/: Cargo.toml  README.md
apex-sdk-metrics/dashboards/: apex-sdk-overview.json  apex-sdk-performance.json
apex-sdk-metrics/examples/: comprehensive_observability.rs
apex-sdk-metrics/src/: aggregation.rs  error_categorization.rs  health.rs  lib.rs  profiling.rs  prometheus_exporter.rs  telemetry.rs
apex-sdk-revive/: Cargo.toml
apex-sdk-revive/src/: adapter.rs  contract.rs  lib.rs
apex-sdk-substrate/: .gitignore  Cargo.toml  README.md  build.rs
apex-sdk-substrate/src/: assets.rs  fee_estimator.rs  lib.rs  monitor.rs  nft.rs  storage.rs  transaction.rs  wallet.rs  xcm.rs
apex-sdk-substrate/src/metadata/: README.md  mod.rs
apex-sdk-substrate/tests/: fee_estimation.rs  transaction_test.rs
apex-sdk-types/: Cargo.toml  README.md
apex-sdk-types/src/: lib.rs
apex-sdk-web/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  eslint.config.mts  jest.config.js  next.config.performance.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apex-sdk-web/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
apex-sdk-web/app/components/: Button.tsx  Card.tsx  CopyButton.tsx  DocumentationTemplates.tsx  EnhancedCodeExample.tsx  EnhancedSearch.tsx  GlobalSearch.tsx  JsonLd.tsx  LiveTerminal.tsx  Logo.tsx  MobileNavigation.tsx  ProgressTracker.tsx  SearchBox.tsx  SearchModal.tsx  TableOfContents.tsx  ThemeToggle.tsx
apex-sdk-web/app/docs/: layout.tsx  page.tsx
apex-sdk-web/content/docs/: api-enhanced.mdx  api.mdx  architecture.mdx  cli-guide.mdx  contributing.mdx  ecosystem.mdx  evm.mdx  examples.mdx  installation.mdx  quickstart-enhanced.mdx  quickstart.mdx  research.mdx  revive.mdx  security.mdx  substrate.mdx  testing.mdx  testnets.mdx  typed-metadata.mdx
apex-sdk-web/data/: navigation.json
apex-sdk-web/lib/: content.ts  navigation.ts  search.ts  validation.ts
apex-sdk-web/lib/hooks/: useSearch.ts
apex-sdk-web/public/: _headers  _routes.json  robots.txt  rustdoc.css  site.webmanifest
apex-sdk-web/scripts/: new-content.js  validate-content.js
apex-sdk-web/templates/: api-reference.mdx  basic-guide.mdx  tutorial.mdx
apex-sdk-web/worker-scripts/: api.js  auth.js  cache.js  redirects.js
apex-sdk-web/workers/: api.test.js  auth.test.js  cache.test.js  redirects.test.js
apex-sdk-web/workers/api-worker/: package.json  wrangler.toml
apex-sdk-web/workers/auth-worker/: package.json  (+1 more)
apex-sdk/benches/: transaction_benchmarks.rs
apex-sdk/src/: advanced.rs  builder.rs  error.rs  error_recovery.rs  lib.rs  performance.rs  sdk.rs  transaction.rs
apex-sdk/tests/: working_integration_tests.rs
cli/: Cargo.toml  README.md
cli/src/: account.rs  balance.rs  config.rs  config_cmd.rs  deploy.rs  keystore.rs  main.rs
cli/tests/: integration_tests.rs
dev/bench/: data.js
docs/: API.md  CLI_GUIDE.md  DOCUMENTATION_HUB.md  ECOSYSTEM_INTEGRATION.md  METADATA_GENERATION.md  QUICK_START.md  README.md  RESEARCH_INITIATIVES.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  Substrate_Features.md  TESTNETS.md  _config.yml  _redirects  docs.html  index.html  robots.txt  sitemap.xml  viewer.html
docs/css/: base.css  main.css  modern.css  pages.css  variables.css
docs/includes/: footer.html  head.html
docs/js/: main-browser.js  seo.js
docs/observability/: metrics-and-monitoring.md
docs/research/: paper-template.tex
examples/: README.md
examples/account-manager/: Cargo.toml  README.md
examples/contract-orchestration/: Cargo.toml  README.md
examples/evm-contract-call/: Cargo.toml
examples/evm-transfer/: Cargo.toml
examples/parachain-assets/: Cargo.toml  README.md
examples/polkadot-showcase/: README.md
examples/price-oracle/: Cargo.toml  README.md
examples/substrate-fees/: Cargo.toml
integration-tests/: Cargo.toml
integration-tests/tests/: asset_hub_test.rs  phase5_integration_tests.rs  revive_integration_test.rs  transaction_test.rs
scripts/: build-cloudflare.js  migrate-docs.sh  optimize-images.sh  run-integration-tests.sh
tests/: integration_test.rs
(+23 files in other folders)
