[package]
name = "apex-sdk-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
apex-sdk = { path = "../apex-sdk" }
apex-sdk-core = { path = "../apex-sdk-core" }
apex-sdk-revive = { path = "../apex-sdk-revive" }
apex-sdk-substrate = { path = "../apex-sdk-substrate" }
tokio = { workspace = true }
reqwest = { version = "0.13", features = ["json"] }
serde_json = { workspace = true }
